# akshare-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_bug_fixes.py
src/akshare_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_api.py  test_mcporter.py  test_server.py
